--- a/netefi/netefi.vcxproj
+++ b/netefi/netefi.vcxproj
@@ -164,6 +164,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ContextImpl.h" />
