--- a/tests/cpptest/cpptest.vcxproj
+++ b/tests/cpptest/cpptest.vcxproj
@@ -148,6 +148,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
